fix(menu-surface): Raise z-index over MDC Dialog (#4185)

--- a/packages/mdc-menu-surface/mdc-menu-surface.scss
+++ b/packages/mdc-menu-surface/mdc-menu-surface.scss
@@ -47,7 +47,7 @@
   opacity: 0;
   overflow: auto;
   will-change: transform, opacity;
-  z-index: 4;
+  z-index: $mdc-menu-surface-z-index;
 
   &:focus {
     outline: none;
