--- a/test/screenshot/spec/mdc-menu/issues/fixture.scss
+++ b/test/screenshot/spec/mdc-menu/issues/fixture.scss
@@ -20,8 +20,7 @@
 // THE SOFTWARE.
 //
 
-$mdc-menu-surface-fade-in-duration: .03s;
-$mdc-menu-surface-fade-out-duration: .075s;
-$mdc-menu-surface-scale-duration: .12s;
-$mdc-menu-surface-min-distance-from-edge: 32px;
-$mdc-menu-surface-z-index: 8 !default; // One above mdc-dialog
+.test-menu--4025 {
+  top: 50%;
+  left: calc(50% - 120px);
+}
